(lang dune 3.14)

(name lexerproj)

(generate_opam_files true)

(source
 (github Eric-dot-png/LexerGen))

(authors "Eric Garcia")

(maintainers "Eric Garcia")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name lexerproj)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
